# EIE

./: CMakeLists.txt  LICENSE  NOTICE  README.md  build-windows-cuda.bat
backends/: compute_backend.h  cpu_backend.cpp
core/: config.h  model_manager.h  scheduling.h  vram_manager.h
docker/: Dockerfile.cuda  Dockerfile.rocm  docker-compose.yaml
docs/: CONTRIBUTING.md
llama.cpp/: CMakeLists.txt
monitoring/: monitoring.h
presets/: development.yaml  dual-core-six.yaml  fixed-appliance.yaml  generic.yaml  three-model-group.yaml
scripts/: build-cpu.sh  build-cuda.sh  build-rocm.sh
server/: api.cpp  api.h  main.cpp
tests/: test_api.py
